<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/btn_bg">

    <TextView
        android:id="@+id/num"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="16sp"
        android:singleLine="false"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"/>

</FrameLayout>